removed spaces in filename

--- a/apps/docs/docs/Opleidingsmateriaal/02-ALEF200.md
+++ b/apps/docs/docs/Opleidingsmateriaal/02-ALEF200.md
@@ -21,6 +21,6 @@ In deze module worden de volgende onderwerpen behandeld:
 Geen
 
 ## Presentatie
-<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/ALEF200 Regels en gegevens - basis.pdf" target="_blank">ALEF200 Regels en gegevens - basis</a>
+<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/ALEF200Regelsengegevens-basis.pdf" target="_blank">ALEF200 Regels en gegevens - basis</a>
 
 ## Opdrachten
