replaced html tags

--- a/apps/docs/docs/opleidingsmateriaal/02-ALEF200.md
+++ b/apps/docs/docs/opleidingsmateriaal/02-ALEF200.md
@@ -21,13 +21,13 @@ In deze module worden de volgende onderwerpen behandeld:
 Geen
 
 ## Presentatie
-<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/PresentatieALEF200.pdf" target="_blank">ALEF200 Regels en gegevens - basis</a>
+[ALEF200 Regels en gegevens - basis](../../static/pdf/PresentatieALEF200.pdf)
 
 ## Opdrachten
-<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/OpdrachtALEF10.pdf" target="_blank">Opdracht ALEF10 – Inrichten gegevensmodel</a>
+[Opdracht ALEF10 – Inrichten gegevensmodel](../../static/pdf/OpdrachtALEF10.pdf)
 
-<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/OpdrachtALEF11.pdf" target="_blank">Opdracht ALEF11 – Initialisatie en gelijkstelling zonder voorwaarden</a>
+[Opdracht ALEF11 – Initialisatie en gelijkstelling zonder voorwaarden](../../static/pdf/OpdrachtALEF11.pdf)
 
-<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/OpdrachtALEF12.pdf" target="_blank">Opdracht ALEF12 – Beslistabel en gelijkstelling met voorwaarden</a>
+[Opdracht ALEF12 – Beslistabel en gelijkstelling met voorwaarden](../../static/pdf/OpdrachtALEF12.pdf)
 
-<img src="../../static/img/pdf-icon.png" width="15"> <a href="../../static/pdf/OpdrachtALEF13.pdf" target="_blank">Opdracht ALEF13 – Kenmerktoekenning en consistentieregel</a>
+[Opdracht ALEF13 – Kenmerktoekenning en consistentieregel](../../static/pdf/OpdrachtALEF13.pdf)
