--- a/apps/docs/docs/opleidingsmateriaal/02-ALEF200.md
+++ b/apps/docs/docs/opleidingsmateriaal/02-ALEF200.md
@@ -21,13 +21,13 @@ In deze module worden de volgende onderwerpen behandeld:
 Geen
 
 ## Presentatie
-[ALEF200 Regels en gegevens - basis](../../static/pdf/PresentatieALEF200.pdf)
+<img src="../../static/img/pdf-icon.png" width="15"> [ALEF200 Regels en gegevens - basis](../../static/pdf/PresentatieALEF200.pdf)
 
 ## Opdrachten
-[Opdracht ALEF10 – Inrichten gegevensmodel](../../static/pdf/OpdrachtALEF10.pdf)
+<img src="../../static/img/pdf-icon.png" width="15"> [Opdracht ALEF10 – Inrichten gegevensmodel](../../static/pdf/OpdrachtALEF10.pdf)
 
-[Opdracht ALEF11 – Initialisatie en gelijkstelling zonder voorwaarden](../../static/pdf/OpdrachtALEF11.pdf)
+<img src="../../static/img/pdf-icon.png" width="15"> [Opdracht ALEF11 – Initialisatie en gelijkstelling zonder voorwaarden](../../static/pdf/OpdrachtALEF11.pdf)
 
-[Opdracht ALEF12 – Beslistabel en gelijkstelling met voorwaarden](../../static/pdf/OpdrachtALEF12.pdf)
+<img src="../../static/img/pdf-icon.png" width="15"> [Opdracht ALEF12 – Beslistabel en gelijkstelling met voorwaarden](../../static/pdf/OpdrachtALEF12.pdf)
 
-[Opdracht ALEF13 – Kenmerktoekenning en consistentieregel](../../static/pdf/OpdrachtALEF13.pdf)
+<img src="../../static/img/pdf-icon.png" width="15"> [Opdracht ALEF13 – Kenmerktoekenning en consistentieregel](../../static/pdf/OpdrachtALEF13.pdf)
