--- a/apps/docs/docs/opleidingsmateriaal/ALEF/03-ALEF201.md
+++ b/apps/docs/docs/opleidingsmateriaal/ALEF/03-ALEF201.md
@@ -18,28 +18,28 @@ In deze module worden de volgende onderwerpen behandeld:
 - Gebruik van metatags
 
 ## Vereiste voorkennis
-[ALEF200 Regels en gegevens - basis](../opleidingsmateriaal/02-ALEF200.md)
+[ALEF200 Regels en gegevens - basis](../ALEF/02-ALEF200.md)
 
-[ALEF300 Testen - basis](../opleidingsmateriaal/06-ALEF300.md)
+[ALEF300 Testen - basis](../ALEF/06-ALEF300.md)
 
 ## Presentatie
-[ALEF201 Regels en gegevens - advanced](../../static/pdf/PresentatieALEF201.pdf)
+[ALEF201 Regels en gegevens - advanced](../../../static/pdf/PresentatieALEF201.pdf)
 
 ## Opdrachten
-[Opdracht ALEF20 – Gelijkstelling met complexe conditie](../../static/pdf/OpdrachtALEF20.pdf)
+[Opdracht ALEF20 – Gelijkstelling met complexe conditie](../../../static/pdf/OpdrachtALEF20.pdf)
 
-[Opdracht ALEF21 – Rekenen met datums](../../static/pdf/OpdrachtALEF21.pdf)
+[Opdracht ALEF21 – Rekenen met datums](../../../static/pdf/OpdrachtALEF21.pdf)
 
-[Opdracht ALEF23 – Min-max](../../static/pdf/OpdrachtALEF23.pdf)
+[Opdracht ALEF23 – Min-max](../../../static/pdf/OpdrachtALEF23.pdf)
 
-[Opdracht ALEF24 – Constructie en feitcreatie](../../static/pdf/OpdrachtALEF24.pdf)
+[Opdracht ALEF24 – Constructie en feitcreatie](../../../static/pdf/OpdrachtALEF24.pdf)
 
-[Opdracht ALEF25 – Consistentiecontrole met meerdere criteria](../../static/pdf/OpdrachtALEF25.pdf)
+[Opdracht ALEF25 – Consistentiecontrole met meerdere criteria](../../../static/pdf/OpdrachtALEF25.pdf)
 
-[Opdracht ALEF26 – Verdelen](../../static/pdf/OpdrachtALEF26.pdf)
+[Opdracht ALEF26 – Verdelen](../../../static/pdf/OpdrachtALEF26.pdf)
 
-[Opdracht ALEF27 – Constructie melding](../../static/pdf/OpdrachtALEF27.pdf)
+[Opdracht ALEF27 – Constructie melding](../../../static/pdf/OpdrachtALEF27.pdf)
 
-[Opdracht ALEF28 – Consistentiecontrole met elfproef](../../static/pdf/OpdrachtALEF28.pdf)
+[Opdracht ALEF28 – Consistentiecontrole met elfproef](../../../static/pdf/OpdrachtALEF28.pdf)
 
-[Opdracht ALEF29 – Consistentiecontrole op uniciteit](../../static/pdf/OpdrachtALEF29.pdf)
+[Opdracht ALEF29 – Consistentiecontrole op uniciteit](../../../static/pdf/OpdrachtALEF29.pdf)
