--- a/apps/docs/docs/opleidingsmateriaal/ALEF/05-ALEF220.md
+++ b/apps/docs/docs/opleidingsmateriaal/ALEF/05-ALEF220.md
@@ -8,13 +8,13 @@ description: Method - Agile Law Execution Factory
 In deze module wordt het specificeren van services behandeld.
 
 ## Vereiste voorkennis
-[ALEF210 Besturing](../opleidingsmateriaal/04-ALEF210.md)
+[ALEF210 Besturing](../ALEF/04-ALEF210.md)
 
 
 ## Presentatie
-[ALEF220 Services](../../static/pdf/PresentatieALEF220.pdf)
+[ALEF220 Services](../../../static/pdf/PresentatieALEF220.pdf)
 
 ## Opdrachten
-[Opdracht ALEF60 – Inrichten rekenservice](../../static/pdf/OpdrachtALEF60.pdf)
+[Opdracht ALEF60 – Inrichten rekenservice](../../../static/pdf/OpdrachtALEF60.pdf)
 
-[Opdracht ALEF61 – Inrichten validatieservice](../../static/pdf/OpdrachtALEF61.pdf)
+[Opdracht ALEF61 – Inrichten validatieservice](../../../static/pdf/OpdrachtALEF61.pdf)
