--- a/apps/docs/docs/opleidingsmateriaal/ALEF/06-ALEF300.md
+++ b/apps/docs/docs/opleidingsmateriaal/ALEF/06-ALEF300.md
@@ -13,11 +13,11 @@ In deze module worden de volgende onderwerpen behandeld:
 Geen
 
 ## Presentatie
-[ALEF300 Testen - basis](../../static/pdf/PresentatieALEF300.pdf)
+[ALEF300 Testen - basis](../../../static/pdf/PresentatieALEF300.pdf)
 
 ## Opdrachten
-[Opdracht ALEF30 – Valideren rekenregel](../../static/pdf/OpdrachtALEF30.pdf)
+[Opdracht ALEF30 – Valideren rekenregel](../../../static/pdf/OpdrachtALEF30.pdf)
 
-[Opdracht ALEF31 – Valideren consistentieregel](../../static/pdf/OpdrachtALEF31.pdf)
+[Opdracht ALEF31 – Valideren consistentieregel](../../../static/pdf/OpdrachtALEF31.pdf)
 
-[Opdracht ALEF32 – Valideren attributen](../../static/pdf/OpdrachtALEF32.pdf)
+[Opdracht ALEF32 – Valideren attributen](../../../static/pdf/OpdrachtALEF32.pdf)
