--- a/apps/docs/docs/opleidingsmateriaal/ALEF/04-ALEF210.md
+++ b/apps/docs/docs/opleidingsmateriaal/ALEF/04-ALEF210.md
@@ -10,13 +10,13 @@ In deze module worden de volgende onderwerpen behandeld:
 - Het onderscheid tussen declaratieve en niet-declaratieve flows
 
 ## Vereiste voorkennis
-[ALEF200 Regels en gegevens - basis](../opleidingsmateriaal/02-ALEF200.md)
+[ALEF200 Regels en gegevens - basis](../ALEF/02-ALEF200.md)
 
 
 ## Presentatie
-[ALEF210 Besturing](../../static/pdf/PresentatieALEF210.pdf)
+[ALEF210 Besturing](../../../static/pdf/PresentatieALEF210.pdf)
 
 ## Opdrachten
-[Opdracht ALEF50 – Inrichten declaratieve flow](../../static/pdf/OpdrachtALEF50.pdf)
+[Opdracht ALEF50 – Inrichten declaratieve flow](../../../static/pdf/OpdrachtALEF50.pdf)
 
-[Opdracht ALEF51 – Inrichten niet-declaratieve flow](../../static/pdf/OpdrachtALEF51.pdf)
+[Opdracht ALEF51 – Inrichten niet-declaratieve flow](../../../static/pdf/OpdrachtALEF51.pdf)
