--- a/apps/docs/docs/opleidingsmateriaal/ALEF/07-ALEF301.md
+++ b/apps/docs/docs/opleidingsmateriaal/ALEF/07-ALEF301.md
@@ -13,21 +13,21 @@ In deze module worden de volgende onderwerpen behandeld:
 - Testdekkingsrapporten
 
 ## Vereiste voorkennis
-[ALEF300 Testen - basis](../opleidingsmateriaal/06-ALEF300.md)
+[ALEF300 Testen - basis](../ALEF/06-ALEF300.md)
 
 
 ## Presentatie
-[ALEF301 Testen - advanced](../../static/pdf/PresentatieALEF301.pdf)
+[ALEF301 Testen - advanced](../../../static/pdf/PresentatieALEF301.pdf)
 
 ## Opdrachten
-[Opdracht ALEF40 – Valideren declaratieve flow](../../static/pdf/OpdrachtALEF40.pdf)
+[Opdracht ALEF40 – Valideren declaratieve flow](../../../static/pdf/OpdrachtALEF40.pdf)
 
-[Opdracht ALEF41 – Valideren niet-declaratieve flow](../../static/pdf/OpdrachtALEF41.pdf)
+[Opdracht ALEF41 – Valideren niet-declaratieve flow](../../../static/pdf/OpdrachtALEF41.pdf)
 
-[Opdracht ALEF43 – Debuggen](../../static/pdf/OpdrachtALEF43.pdf)
+[Opdracht ALEF43 – Debuggen](../../../static/pdf/OpdrachtALEF43.pdf)
 
-[Opdracht ALEF44 – Testdekking](../../static/pdf/OpdrachtALEF44.pdf)
+[Opdracht ALEF44 – Testdekking](../../../static/pdf/OpdrachtALEF44.pdf)
 
-[Opdracht ALEF45 – Valideren rekenservice](../../static/pdf/OpdrachtALEF45.pdf)
+[Opdracht ALEF45 – Valideren rekenservice](../../../static/pdf/OpdrachtALEF45.pdf)
 
-[Opdracht ALEF46 – Valideren validatieservice](../../static/pdf/OpdrachtALEF46.pdf)
+[Opdracht ALEF46 – Valideren validatieservice](../../../static/pdf/OpdrachtALEF46.pdf)
